--- a/220107_01.ipynb
+++ b/220107_01.ipynb
@@ -38,58 +38,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015년 01월</td>\n",
-       "      <td>중국</td>\n",
-       "      <td>116932.0</td>\n",
-       "      <td>12083947.0</td>\n",
-       "      <td>334522.0</td>\n",
-       "      <td>8143271.0</td>\n",
-       "      <td>3940676.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015년 01월</td>\n",
+       "      <th>194</th>\n",
+       "      <td>2020년 05월</td>\n",
        "      <td>미국</td>\n",
-       "      <td>65888.0</td>\n",
-       "      <td>5561545.0</td>\n",
-       "      <td>509564.0</td>\n",
-       "      <td>3625062.0</td>\n",
-       "      <td>1936484.0</td>\n",
+       "      <td>126598.0</td>\n",
+       "      <td>4600726.0</td>\n",
+       "      <td>1157163.0</td>\n",
+       "      <td>4286873.0</td>\n",
+       "      <td>313853.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015년 01월</td>\n",
+       "      <th>195</th>\n",
+       "      <td>2020년 05월</td>\n",
        "      <td>일본</td>\n",
-       "      <td>54017.0</td>\n",
-       "      <td>2251307.0</td>\n",
-       "      <td>82480.0</td>\n",
-       "      <td>3827247.0</td>\n",
-       "      <td>-1575940.0</td>\n",
+       "      <td>166568.0</td>\n",
+       "      <td>1798128.0</td>\n",
+       "      <td>133763.0</td>\n",
+       "      <td>3102734.0</td>\n",
+       "      <td>-1304606.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015년 02월</td>\n",
+       "      <th>196</th>\n",
+       "      <td>2020년 06월</td>\n",
        "      <td>중국</td>\n",
-       "      <td>86228.0</td>\n",
-       "      <td>9927642.0</td>\n",
-       "      <td>209100.0</td>\n",
-       "      <td>6980874.0</td>\n",
-       "      <td>2946768.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015년 02월</td>\n",
+       "      <th>197</th>\n",
+       "      <td>2020년 06월</td>\n",
        "      <td>미국</td>\n",
-       "      <td>60225.0</td>\n",
-       "      <td>5021264.0</td>\n",
-       "      <td>428678.0</td>\n",
-       "      <td>2998216.0</td>\n",
-       "      <td>2023048.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>2020년 06월</td>\n",
+       "      <td>일본</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -97,12 +97,12 @@
        "</div>"
       ],
       "text/plain": [
-       "          기간 국가명      수출건수        수출금액      수입건수       수입금액       무역수지  기타사항\n",
-       "0  2015년 01월  중국  116932.0  12083947.0  334522.0  8143271.0  3940676.0   NaN\n",
-       "1  2015년 01월  미국   65888.0   5561545.0  509564.0  3625062.0  1936484.0   NaN\n",
-       "2  2015년 01월  일본   54017.0   2251307.0   82480.0  3827247.0 -1575940.0   NaN\n",
-       "3  2015년 02월  중국   86228.0   9927642.0  209100.0  6980874.0  2946768.0   NaN\n",
-       "4  2015년 02월  미국   60225.0   5021264.0  428678.0  2998216.0  2023048.0   NaN"
+       "            기간 국가명      수출건수       수출금액       수입건수       수입금액       무역수지  기타사항\n",
+       "194  2020년 05월  미국  126598.0  4600726.0  1157163.0  4286873.0   313853.0   NaN\n",
+       "195  2020년 05월  일본  166568.0  1798128.0   133763.0  3102734.0 -1304606.0   NaN\n",
+       "196  2020년 06월  중국       NaN        NaN        NaN        NaN        NaN   NaN\n",
+       "197  2020년 06월  미국       NaN        NaN        NaN        NaN        NaN   NaN\n",
+       "198  2020년 06월  일본       NaN        NaN        NaN        NaN        NaN   NaN"
       ]
      },
      "execution_count": 1,
@@ -118,7 +118,15 @@
     "\n",
     "csv_file_path = \"trade.csv\"\n",
     "trade = pd.read_csv(csv_file_path)\n",
-    "trade.head()"
+    "trade.head()\n",
+    "trade.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "데이터 불러오기\n"
    ]
   },
   {
